Fixed Navbar and Team Area Overflow

--- a/public/css/index/index_contactus.css
+++ b/public/css/index/index_contactus.css
@@ -15,7 +15,6 @@
   overflow-x: hidden;
   overflow-y: hidden;
   /* ///// inputs /////*/
-  margin-top: 1rem;
 }
 
 .contact_us .cu {
